# MNNSeg

./: .gitignore  CMakeLists.txt  README.md
MNNPlugin/: CMakeLists.txt
MNNPlugin/demo/: imageRotate.cpp
MNNPlugin/docs/: WindowsBuild.md
MNNPlugin/include/: AutoTime.h  AutoTime.hpp  ErrorCode.h  ImageProcess.h  ImageProcess.hpp  Interpreter.h  Interpreter.hpp  MNNForwardType.h  Matrix.h  Rect.h  Tensor.h  Tensor.hpp
MNNPlugin/include/expr/: Executor.h  ExecutorScope.h  Expr.h  ExprCreator.h  MathOp.h  Module.h  Module.hpp  NN.h  NeuralNetWorkOp.h  Optimizer.h  Optimizer.hpp  Scope.h  Scope.hpp
MNNPlugin/include/plugin/: PluginContext.hpp  PluginKernel.hpp  PluginShapeInference.hpp
MNNPlugin/src/: export.cpp  export.h  main.cpp  segmnn.cpp  segmnn.h  segmnn.hpp
MNNSegTest/: Assembly-CSharp.csproj  MNNSegTest.sln
MNNSegTest/Assets/: FlipTexture.compute  WebCamControl.cs  origin.mat  test.cs
MNNSegTest/Assets/Editor/: ARCameraBackgroundCustomEditor.cs  CustomPostProcess.cs
MNNSegTest/Assets/Materials/: ARBackground.mat  ARBackground.shader  CBTestBackground.mat  CBTestBackground.shader  DownSampling.shader  DualKawaseBlur.shader  FlipAndSplitTexture.compute  FlipTexture.compute  Quad.mat  UnlitSky.shader  background.mat  result.mat  skybox.mat  temp.mat
MNNSegTest/Assets/Plugins/: libMNN.dylib
MNNSegTest/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
include/expr/: Executor.hpp  Expr.hpp  ExprCreator.hpp  NN.hpp
include/plugin/: PluginKernel.hpp
src/: export.cpp  export.h  main.cpp  segmnn.cpp  segmnn.hpp
(+38 files in other folders)
